--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,33 @@
-set-window-option -g mode-keys vi
+# Use C-k instead of C-b
+unbind C-b
+set -g prefix C-k
+
+# I especially like being able to search with /,? when in copy-mode
+setw -g mode-keys vi 
+
+# split window like vim
+# vim's defination of a horizontal/vertical split is revised from tumx's
+bind s split-window -h
+bind v split-window -v
 
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
-unbind-key j
-bind-key j select-pane -D # Similar to 'C-w j' to navigate windows in Vim
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+# Similar to 'C-w j' to navigate windows in Vim
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-set -g status-left "#[fg=green]s#S:w#I.p#P#[default]"
+
+# resize panes like vim
+# feel free to change the "1" to however many lines you want to resize by,
+# only one at a time can be slow
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+bind - resize-pane -D 10
+bind + resize-pane -U 10
+
+# bind : to command-prompt like vim
+# this is the default in tmux already
+bind : command-prompt
