--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,8 @@
+[user]
+       name = vincent178
+       email = vincent.007.cn@gmail.com
+[credential]
+       helper = osxkeychain
 [color]
   ui = true
 [color "diff"]
