--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,3 +31,6 @@ bind + resize-pane -U 10
 # bind : to command-prompt like vim
 # this is the default in tmux already
 bind : command-prompt
+
+
+set -g mode-mouse on
