add slate config files

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,14 @@ set -g prefix C-k
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
 
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # split window like vim
 # vim's defination of a horizontal/vertical split is revised from tumx's
 bind s split-window -h
@@ -32,5 +40,3 @@ bind + resize-pane -U 10
 # this is the default in tmux already
 bind : command-prompt
 
-
-set -g mode-mouse on
