--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
-# Use C-k instead of C-b
+# Use C-a instead of C-b
 unbind C-b
-set -g prefix C-k
+set -g prefix C-a
 
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
