--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,9 +9,12 @@ setw -g mode-keys vi
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
+
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # split window like vim
 # vim's defination of a horizontal/vertical split is revised from tumx's
