support scroll in vim tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,11 @@
 unbind C-b
 set -g prefix 'C-\'
 
+
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
+
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
 
