--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # Use C-a instead of C-b
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 unbind C-b
 set -g prefix 'C-\'
-
 
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
@@ -10,24 +10,18 @@ set-window-option -g mode-mouse on
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
 
-# Setup 'v' to begin selection as in Vim
+# Setup 'v' to begin selection as in Vim and save to System clipboard
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # split window like vim
 # vim's defination of a horizontal/vertical split is revised from tumx's
 bind s split-window -h
 bind v split-window -v
-
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
 
 # Similar to 'C-w j' to navigate windows in Vim
 bind h select-pane -L
@@ -54,4 +48,3 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
