add ignore dirs

--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -19,6 +19,8 @@
  
 --ignore-dir=.idea/
 --ignore-dir=node_modules/
+--ignore-dir=.git/
+--ignore-dir=log/
  
 #make sure ack knows how to search common filetypes used in rails projects
 --type-add=css=scss
