ignore tags file when do ack grep

--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -21,6 +21,7 @@
 --ignore-dir=node_modules/
 --ignore-dir=.git/
 --ignore-dir=log/
+--ignore-file=match:tags
  
 #make sure ack knows how to search common filetypes used in rails projects
 --type-add=css=scss
