--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set -g mouse on
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
 
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
 # new window with same directory of current
 bind c new-window -c "#{pane_current_path}"
 
