add tmux tpm and auto restore tmux session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 unbind C-b
 set -g prefix 'C-\'
 
@@ -31,3 +37,8 @@ bind + resize-pane -U 5
 # bind : to command-prompt like vim
 bind : command-prompt
 
+# tmux-continuum
+# automatically restore when tmux is started
+set -g @continuum-restore 'on'
+
+run -b '~/.tmux/plugins/tpm/tpm'
