enhance tmux * move status line on top * copy-mode with vi kind of selection key binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,13 @@ set -g prefix 'C-\'
 
 set -g mouse on
 
+set-option -g status-position top
+
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
