--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g prefix 'C-\'
 
 set -g mouse on
 
-set-option -g status-position top
+set-option -g status-position bottom 
 
 # I especially like being able to search with /,? when in copy-mode
 setw -g mode-keys vi 
