continue tuning alacritty tmux and bash

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 unbind C-b
 set -g prefix 'C-\'
 
-set -g mouse on
+set -g mouse on 
 
-set-option -g status-position bottom 
+set-option -g status-position top
 
-# I especially like being able to search with /,? when in copy-mode
+# vim like in copy-mode
 setw -g mode-keys vi 
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
