--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -4,43 +4,18 @@ window:
   dimensions:
     columns: 140
     lines: 38
+  padding:
+    x: 0
+    y: 0
+
+  decorations: none
+
+  startup_mode: Maximized
 
 background_opacity: 0.95
 
 font:
   size: 14.0
-
-# Colors (Gruvbox dark)
-# https://github.com/alacritty/alacritty/wiki/Color-schemes
-colors:
-  # Default colors
-  primary:
-    # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
-
-  # Normal colors
-  normal:
-    black:   '#282828'
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
-
-  # Bright colors
-  bright:
-    black:   '#928374'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#ebdbb2'
 
 cursor:
   style: Block
