navigate between vim and tmux splits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,16 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 unbind C-b
 set -g prefix 'C-\'
+
+# bind : to command-prompt like vim
+bind : command-prompt
+
+
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 set -g mouse on 
 
@@ -17,7 +24,6 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # new window with same directory of current
 bind c new-window -c "#{pane_current_path}"
@@ -25,22 +31,13 @@ bind c new-window -c "#{pane_current_path}"
 # split window like vim
 # vim's defination of a horizontal/vertical split is revised from tumx's
 bind s split-window -h -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}" -p 40
-
-# similar to 'C-w j' to navigate windows in Vim
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind v split-window -v -c "#{pane_current_path}" -p 20
 
 # resize panes like vim
 bind < resize-pane -L 5
 bind > resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
-
-# bind : to command-prompt like vim
-bind : command-prompt
 
 # tmux-continuum
 # automatically restore when tmux is started
