--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,18 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+
+set -g default-terminal "xterm-256color"
+
 unbind C-b
-set -g prefix 'C-\'
+set -g prefix 'M-b'
 
 # bind : to command-prompt like vim
 bind : command-prompt
-
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
@@ -23,7 +25,6 @@ setw -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
 
 # new window with same directory of current
 bind c new-window -c "#{pane_current_path}"
