--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g default-terminal "xterm-256color"
 
-unbind C-b
-set -g prefix 'M-b'
+# unbind C-b
+# set -g prefix 'M-b'
 
 # bind : to command-prompt like vim
 bind : command-prompt
@@ -18,7 +18,7 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 set -g mouse on 
 
-set-option -g status-position top
+set-option -g status-position bottom
 
 # vim like in copy-mode
 setw -g mode-keys vi 
