--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g default-terminal "xterm-256color"
 
-# unbind C-b
-# set -g prefix 'M-b'
+unbind C-b
+set -g prefix 'C-\'
 
 # bind : to command-prompt like vim
 bind : command-prompt
