neovim 0.5.0 native lsp configuration

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -5,12 +5,12 @@ window:
     columns: 140
     lines: 38
   padding:
-    x: 6
+    x: 0
     y: 0
 
   decorations: none
 
-  startup_mode: Maximized
+  startup_mode: Fullscreen
 
 background_opacity: 0.95
 
