--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,9 @@ bind > resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
 
+# make pane full screen
+# bind z
+
 # tmux-continuum
 # automatically restore when tmux is started
 set -g @continuum-restore 'on'
