--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -5,12 +5,12 @@ window:
     columns: 140
     lines: 38
   padding:
-    x: 0
-    y: 0
+    x: 12
+    y: 12
 
   decorations: none
 
-  startup_mode: Fullscreen
+  # startup_mode: Fullscreen
 
 background_opacity: 0.95
 
