--- a/.yabairc
+++ b/.yabairc
@@ -23,11 +23,15 @@ yabai -m config mouse_action2                resize
 yabai -m config mouse_drop_action            swap
 
 # general space settings
-yabai -m config layout                       float
+yabai -m config layout                       bsp
 yabai -m config top_padding                  0
 yabai -m config bottom_padding               0
 yabai -m config left_padding                 0
 yabai -m config right_padding                0
 yabai -m config window_gap                   0
+
+yabai -m config --space 1 layout float
+yabai -m config --space 2 layout float
+yabai -m config --space 3 layout float
 
 echo "yabai configuration loaded.."
