--- a/.yabairc
+++ b/.yabairc
@@ -11,12 +11,12 @@ yabai -m config window_opacity_duration      0.0
 yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.90
 yabai -m config window_border                off
-yabai -m config window_border_width          0.0
+yabai -m config window_border_width          2.0
 yabai -m config active_window_border_color   0xff775759
 yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xffd75f5f
-yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 off
+yabai -m config split_ratio                  0.70
+yabai -m config auto_balance                 on
 yabai -m config mouse_modifier               fn
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
@@ -24,11 +24,11 @@ yabai -m config mouse_drop_action            swap
 
 # general space settings
 yabai -m config layout                       bsp
-yabai -m config top_padding                  0
-yabai -m config bottom_padding               0
-yabai -m config left_padding                 0
-yabai -m config right_padding                0
-yabai -m config window_gap                   0
+yabai -m config top_padding                  6
+yabai -m config bottom_padding               6 
+yabai -m config left_padding                 6 
+yabai -m config right_padding                6 
+yabai -m config window_gap                   6 
 
 yabai -m config --space 1 layout float
 yabai -m config --space 2 layout float
