--- a/.skhdrc
+++ b/.skhdrc
@@ -76,9 +76,10 @@
 # A REFERENCE ONLY, WHEN MAKING YOUR OWN CONFIGURATION..          #
 # ############################################################### #
 
-alt - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
-# alt - return : /Applications/iTerm.app/Contents/MacOS/iTerm2
+# alt - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
+alt - return : /Applications/iTerm.app/Contents/MacOS/iTerm2
 shift + alt - return : /Applications/Safari.app/Contents/MacOS/Safari
+alt - e : /usr/local/bin/code
 alt - w : yabai -m window --close
 
 # focus window
