--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -15,7 +15,7 @@ window:
 background_opacity: 0.9
 
 font:
-  size: 10.0
+  size: 8.0
   normal:
     family: DroidSansMono Nerd Font
 
@@ -84,6 +84,6 @@ cursor:
   style: Block
   unfocused_hollow: true
 
-key_bindings:
-  - { key: Back, action:  ReceiveChar}
+# key_bindings:
+  # - { key: Back, action:  ReceiveChar}
     
