--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,6 @@
 # window customizations
 window:
+  opacity: 0.9
   dimensions:
     columns: 140
     lines: 38
@@ -26,56 +27,53 @@ font:
   #   family: DroidSansMono Nerd Font
 
 colors:
-  # Default colors
-  primary:
-    background: '#202734'
-    foreground: '#CBCCC6'
-
-  # Normal colors
-  normal:
-    black: '#191E2A'
-    red: '#FF3333'
-    green: '#BAE67E'
-    yellow: '#FFA759'
-    blue: '#73D0FF'
-    magenta: '#FFD580'
-    cyan: '#95E6CB'
-    white: '#C7C7C7'
-
-  # Bright colors
-  bright:
-    black: '#686868'
-    red: '#F27983'
-    green: '#A6CC70'
-    yellow: '#FFCC66'
-    blue: '#5CCFE6'
-    magenta: '#FFEE99'
-    cyan: '#95E6CB'
-    white: '#FFFFFF'    
-    
   # primary:
-  #   background: '#282828'
-  #   foreground: '#ebdbb2'
+  #   background: '#202734'
+  #   foreground: '#CBCCC6'
 
   # normal:
-  #   black:   '#282828'
-  #   red:     '#cc241d'
-  #   green:   '#98971a'
-  #   yellow:  '#d79921'
-  #   blue:    '#458588'
-  #   magenta: '#b16286'
-  #   cyan:    '#689d6a'
-  #   white:   '#a89984'
+  #   black: '#191E2A'
+  #   red: '#FF3333'
+  #   green: '#BAE67E'
+  #   yellow: '#FFA759'
+  #   blue: '#73D0FF'
+  #   magenta: '#FFD580'
+  #   cyan: '#95E6CB'
+  #   white: '#C7C7C7'
 
   # bright:
-  #   black:   '#928374'
-  #   red:     '#fb4934'
-  #   green:   '#b8bb26'
-  #   yellow:  '#fabd2f'
-  #   blue:    '#83a598'
-  #   magenta: '#d3869b'
-  #   cyan:    '#8ec07c'
-  #   white:   '#ebdbb2'
+  #   black: '#686868'
+  #   red: '#F27983'
+  #   green: '#A6CC70'
+  #   yellow: '#FFCC66'
+  #   blue: '#5CCFE6'
+  #   magenta: '#FFEE99'
+  #   cyan: '#95E6CB'
+  #   white: '#FFFFFF'    
+    
+  primary:
+    background: '#282828'
+    foreground: '#ebdbb2'
+
+  normal:
+    black:   '#282828'
+    red:     '#cc241d'
+    green:   '#98971a'
+    yellow:  '#d79921'
+    blue:    '#458588'
+    magenta: '#b16286'
+    cyan:    '#689d6a'
+    white:   '#a89984'
+
+  bright:
+    black:   '#928374'
+    red:     '#fb4934'
+    green:   '#b8bb26'
+    yellow:  '#fabd2f'
+    blue:    '#83a598'
+    magenta: '#d3869b'
+    cyan:    '#8ec07c'
+    white:   '#ebdbb2'
 
 cursor:
   style: Block
