--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,15 +13,13 @@ font:
   size: 12.0
   normal:
     family: Hack Nerd Font Mono
-
+    style: Regular
   bold:
     family: Hack Nerd Font Mono
     style: Blod
-
   italic:
     family: Hack Nerd Font Mono
     style: Italic
-
   bold_italic:
     family: Hack Nerd Font Mono
     style: Blod Italic
