improve tmux and plugin update nvim-cmp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,13 +32,17 @@ bind c new-window -c "#{pane_current_path}"
 # split window like vim
 # vim's defination of a horizontal/vertical split is revised from tumx's
 bind s split-window -h -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}" -p 20
+bind v split-window -v -c "#{pane_current_path}"
 
 # resize panes like vim
 bind < resize-pane -L 5
 bind > resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
+
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b;s/vincent.huang/~/:pane_current_path}'
 
 # make pane full screen
 # bind z
