--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
 set -g default-terminal "xterm-256color"
+set -g xterm-keys on
 
 unbind C-b
 set -g prefix 'C-\'
@@ -42,7 +43,7 @@ bind + resize-pane -U 5
 
 set-option -g status-interval 5
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b;s/vincent.huang/~/:pane_current_path}'
+set-option -g automatic-rename-format '#{b;s/vincenthuang/~/:pane_current_path}'
 
 # make pane full screen
 # bind z
