add GithubLink plugin

--- a/.config/git/config
+++ b/.config/git/config
@@ -7,3 +7,8 @@
 	default = current
 [pull]
 	rebase = true
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
