feat: tmux new theme and nvim new theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
