feat: hide and restore tmux panel

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,9 @@ bind > resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
 
+bind-key ! break-pane -d
+bind-key @ join-pane -s $.0 -h
+
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b;s/vincenthuang/~/:pane_current_path}'
