feat: LSP config for C & hyprland multi-monitor configuration

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,7 +6,11 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,0x0,1
 monitor=DP-1,preferred,0x-2160,1
-# monitor=,preferred,auto,1.5,transform,1
+
+# Workspaces rules
+workspace=1,monitor:DP-1
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
