--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,8 +8,11 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+
 set -g xterm-keys on
+
+set -gq allow-passthrough on
 
 unbind C-b
 set -g prefix 'C-\'
